# gsd-2

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  test.cmd  tsconfig.test.json
.github/workflows/: ci.yml  pipeline.yml
.gsd/: PROJECT.md  REQUIREMENTS.md
.planning/: PROJECT.md  ROADMAP.md  STATE.md  session-migration-trace.md
.plans/: ollama-native-provider.md
mintlify-docs/: docs.json
native/crates/engine/: Cargo.toml
native/crates/engine/src/: lib.rs
scripts/: build-web-if-stale.cjs  dev-symlink.sh  parallel-monitor.mjs
src/: cli-web-branch.ts  cli.ts  onboarding.ts  resource-loader.ts  web-mode.ts  wizard.ts  worktree-cli.ts
src/tests/: native-search.test.ts  parse-cli-args.test.ts  session-memory-leaks.test.ts  tui-running-and-success-box.test.ts  web-command-parity-contract.test.ts  web-diagnostics-contract.test.ts  web-mode-cli.test.ts
src/web/: auto-dashboard-service.ts  bridge-service.ts  captures-service.ts  cleanup-service.ts  cli-entry.ts  doctor-service.ts  export-service.ts  forensics-service.ts  history-service.ts  hooks-service.ts  recovery-diagnostics-service.ts  settings-service.ts  skill-health-service.ts  undo-service.ts  visualizer-service.ts
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts  git-integration.ts  gsd-client.ts  sidebar.ts
web/: package-lock.json  package.json  proxy.ts
web/app/: globals.css  layout.tsx
web/lib/: auth.ts  browser-slash-command-dispatch.ts  command-surface-contract.ts  diagnostics-types.ts  gsd-workspace-store.tsx  pty-chat-parser.ts  (+6 more)
(+163 files in other folders)
